--- a/android/build.gradle
+++ b/android/build.gradle
@@ -41,5 +41,5 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.tom_roush:pdfbox-android:1.8.10.1'
+    implementation 'com.tom-roush:pdfbox-android:2.0.27.0'
 }
